 (12) {07-04-2019 17:30} Unit movement fixes : Juan Pablo
 1. [FIX]
    The world handles the informs that are sent to tribes, and checks whether the tribe already knows the cell
    before sending the inform indicating that a cell has been discovered.
----------------------------------------------------------------------------------------------------------------
 (13) {07-04-2019 18:20} Units informed of cells discovered: Juan Pablo
 1. [NEW]
    When a unit discovers a new cell, all the units belonging to the same cell get informed of the 
    new discovery
----------------------------------------------------------------------------------------------------------------
 (14) {08/04/2019 13:00} Refactoring tribe known cell system : Inaki
 1. [REFACT] ref [NEW 11.1]
    Moved information from known cells to the tribe. The reason is it feels more natural that way. Also, added
      some reusable code to AgWorld.
 2. [REFACT]
    Changed Tribe returning a collection with all the units. Better return an iterator to cycle on all the units.
----------------------------------------------------------------------------------------------------------------
 (15) {09/04/2019 18:00} Refactoring agent tribe known cells : Inaki
 1. [REFACT]
    Added the same implementation to Agent Tribe storing cells as "Tribe" so code is reused.
 2. [NOTE]
    We could serialize the GameMap of Agent Tribe and send it straight to the 
        agent units with a custom protocol.
----------------------------------------------------------------------------------------------------------------
 (16) {10/04/2019 12:00} The ticker : Inaki
 1. [NEW]
    Created the world clock to function on ticks. The delayed behaviors now use the tick as a measure.
        The speed of the game can change by the time between ticks.
 2. [TODO]
    We need a configurator to store parameters like time between ticks.