@@ -1,0 +1,18 @@
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+package es.upm.woa.agent.group1.strategy;
+
+/**
+ *
+ * @author ISU
+ */
+public interface StrategyEventDispatcher {
+    
+    void subscribe(Strategy subscriber);
+    
+    void dispatch(StrategyEvent event);
+    
+}
